# gpt-2-training

./: .env  .gitignore  README.md  pyproject.toml
configs/: train.json
scripts/: prepare_data.py  train.py
src/traingpt/config/: model_config.py  training_config.py
src/traingpt/data/: dataset.py  preprocessing.py
src/traingpt/model/: attention.py  blocks.py  gpt2.py
src/traingpt/training/: metrics.py  trainer.py  utils.py
