[tool.poetry]
name = "traingpt"
version = "0.1.0"
description = "Experimental GPT-2 implementation to get experience with best practices for LLM training"
authors = ["Shane Caldwell"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
torch = "^2.5.1"
pydantic = "^2.10.1"
accelerate = "^1.1.1"
wandb = "^0.18.7"
tiktoken = "^0.8.0"
tqdm = "^4.67.1"
rich = "^13.9.4"
typer = "^0.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
ruff = "^0.8.0"
jupyter = "^1.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
